# mcp-taiwan-legal-db-integrated

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  verify.py
.github/workflows/: ci.yml
lazypack/: diagnose.ps1  setup_integrated.ps1  使用說明.txt  安裝_台灣法律MCP整合版.bat  重新診斷.bat
mcp_server/: pcc_updater.py  self_update.py  server.py
mcp_server/parsers/: judicial_parser.py
mcp_server/tests/: test_errors.py  test_judicial_doc.py  test_judicial_search.py  test_judicial_search_integration.py  test_lawsearch_integration.py  test_lawsearch_integration_simple.py  test_lawsearch_unit.py  test_pcc_letters.py  test_regulation_client.py  test_server.py  test_waf_bypass.py
mcp_server/tools/: judicial_search.py  pcc_letters.py
scripts/: build_db.py  crawler.py  pcc_console_crawler.js  schema.sql
