[project]
name = "mcp-taiwan-legal-db-integrated"
version = "1.1.0"
description = "MCP server for querying Taiwan (ROC) judicial judgments, the national regulation database, and PCC procurement interpretation letters, with built-in auto-update"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "LawChat", email = "opensource@lawchat.com.tw" },
    { name = "AXK1990 (Enhanced version maintainer)" },
]
keywords = ["mcp", "taiwan", "legal", "regulation", "judicial", "judgment", "procurement", "pcc"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Chinese (Traditional)",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.0.0",
    "playwright>=1.40.0",
    "lxml>=5.0.0",
    # Use OS-native trust stores (Keychain / CryptoAPI / system ca-certs)
    # instead of the certifi bundle. Required because TWCA Global Root CA
    # in Mozilla's bundle lacks the Subject Key Identifier extension,
    # which OpenSSL 3.6+ rejects. See mcp_server/config.py.
    "truststore>=0.9.0",
    # Required for ZoneInfo on Python 3.9+ when system tzdata is unavailable
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-taiwan-legal-db-integrated = "mcp_server.server:mcp.run"

[project.urls]
Homepage = "https://github.com/AXK1990/mcp-taiwan-legal-db-integrated"
Issues = "https://github.com/AXK1990/mcp-taiwan-legal-db-integrated/issues"
"Enhanced Version" = "https://github.com/AXK1990/mcp-taiwan-legal-db-enhanced"
"Original Project" = "https://github.com/lawchat-oss/mcp-taiwan-legal-db"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_server*"]

[tool.setuptools.package-data]
mcp_server = ["data/*.json", "data/*.db"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["mcp_server/tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
